Fix landing button spacing

--- a/sass/blocks/_landing.scss
+++ b/sass/blocks/_landing.scss
@@ -37,7 +37,7 @@
 
   &__cta {
     position: absolute;
-    top: calc(100% + 3.5rem);
+    top: calc(100% + 2.5rem);
     left: 50%;
     transform: translate3d(-50%, 0, 0);
     color: cc(primary);
